# erl_covariance

./: .clang-format  CMakeLists.txt  README.md  erl_covariance.repos  package.xml  pyproject.toml  setup.py
cmake/: erl_covarianceConfig.cmake.in
include/erl_covariance/: covariance.hpp  covariance.tpp  custom_kernel_v1.hpp  custom_kernel_v2.hpp  custom_kernel_v3.hpp  custom_kernel_v4.hpp  init.hpp  matern32.hpp  matern32.tpp  ornstein_uhlenbeck.hpp  ornstein_uhlenbeck.tpp  pybind11_erl_covariance.hpp  radial_bias_function.hpp  radial_bias_function.tpp  rational_quadratic.hpp  rational_quadratic.tpp  reduced_rank_covariance.hpp  reduced_rank_covariance.tpp  reduced_rank_matern32.hpp  reduced_rank_matern32.tpp  register.hpp
matlab/: azimuth_elevation.m  rbf.m
python/: setup.py.in
python/binding/: pybind11_erl_covariance.cpp  pyerl_covariance.cpp
python/erl_covariance/: __init__.py  __init__.pyi  pyerl_covariance.pyi
src/: covariance.cpp  custom_kernel_v1.cpp  custom_kernel_v2.cpp  custom_kernel_v3.cpp  custom_kernel_v4.cpp  init.cpp  matern32.cpp  ornstein_uhlenbeck.cpp  radial_bias_function.cpp  rational_quadratic.cpp  reduced_rank_covariance.cpp  reduced_rank_matern32.cpp  register.cpp
test/: CMakeLists.txt  cov_fnc.cpp  test_covariance_setting.cpp  test_matern32.cpp  test_ornstein_uhlenbeck.cpp
test/gtest/: matern32_ktrain.txt  reduced_rank_matern32.yaml  test_covariance_serialization.cpp  test_covariance_setting.cpp  test_llt.cpp  test_matern32.cpp  test_matern32_3d.cpp  test_ornstein_uhlenbeck.cpp  test_radial_bias_function.cpp  test_rational_quadratic.cpp  test_reduced_rank_matern32.cpp  test_reduced_rank_serialization.cpp  x_train.txt
test/pytest/: eigen_function.py  rational_quadratic.py
