[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
description = "Python bindings for erl_covariance"
python_pkg_name = "erl_covariance"
pybind_module_name = "pyerl_covariance"
erl_dependencies = ["erl_cmake_tools", "erl_common"]
build_type = "Release"
version = "0.1.0"
author = "Zhirui Dai"
author_email = "zhdai@ucsd.edu"
entry_points = { console_scripts = [] }
license = "MIT"
